--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "dataterminal.net"
+baseURL = "/"
 title = "dataterminal"
 languageCode = "sv-SE"
 theme = "devise"
@@ -47,9 +47,9 @@ copyright = "© 2022 dataterminal"
   [params.style]                              # CSS style overrides
     backgroundColor = "#151518"
     fontColor = "#fffef3"
-  [[params.social]]
-    fa_icon = "fab fa-github fa-1x"          # Font Awesome icon class
-    href = "http://github.com/dataterminal"  # Link to associate with icon (http://, https://, mailto:)
+  #[[params.social]]
+  #  fa_icon = "fab fa-github fa-1x"          # Font Awesome icon class
+  #  href = "http://github.com/dataterminal"  # Link to associate with icon (http://, https://, mailto:)
   [[params.social]]
     fa_icon = "fab fa-instagram fa-1x"
     href = "http://instagram.com/datarapporteringsterminal"
