adding content, configuring index.html

--- a/config.toml
+++ b/config.toml
@@ -58,4 +58,4 @@ copyright = "© 2022 dataterminal"
     href = "http://twitter.com/dataterminal_"
   [[params.social]]
     fa_icon = "fas fa-envelope fa-1x"
-    href = "mailto: dataterminal@mailfence.com"
+    href = "mailto: kontakt@dataterminal.net"
