remove description from config.toml

--- a/config.toml
+++ b/config.toml
@@ -38,7 +38,7 @@ copyright = "© 2022 dataterminal"
 
 # Configuration Features
 [params]
-  description = "Spicy content om radiolära, cyber och SIGINT. Så spicy det kan bli med vågutbredning, modulering och signaldisciplin. Vi tittar på aktuella hotaktörer, attackvektorer och elektronisk krigföring. Var en tillgång - tråkigt vinner."   # Your meta description of the site
+  #description = "Radiolära, cyber och SIGINT. Vad är frekvens och våglängd? Hur funkar modulering? Vi tittar på aktuella hotaktörer, attackvektorer och elektronisk krigföring. Var en tillgång - tråkigt vinner."   # Your meta description of the site
   header_title = "DATATERMINAL"               # Your header title
   header_subtitle = "DEFENSIV INFRASTRUKTUR™" # Your header subtitle
   home_image = "/images/avatar.png"           # Path to header image starting from the static directory
