--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,7 @@ languageCode = "sv-SE"
 theme = "devise"
 relativeURLs = true
 enableEmoji = true
-#googleAnalytics = ""
+googleAnalytics = "G-BKP979QY9K"
 enableRobotsTXT = true
 copyright = "© 2023 dataterminal"
 
