--- a/netlify.toml
+++ b/netlify.toml
@@ -3,7 +3,7 @@
   [headers.values]
     X-Frame-Options = "DENY"
     X-XSS-Protection = "1; mode=block"
-    Content-Security-Policy = "img-src * data:; font-src * data:; default-src 'unsafe-inline' dataterminal.net ajax.cloudflare.com secure.gravatar.com search.google.com fonts.googleapis.com fonts.gstatic.com ajax.googleapis.com www.google-analytics.com www.googletagmanager.com ";
+    Content-Security-Policy = "img-src * data:; font-src * data:; default-src 'unsafe-inline' dataterminal.net https://static.cloudflareinsights.com/beacon.min.js ajax.cloudflare.com secure.gravatar.com search.google.com fonts.googleapis.com fonts.gstatic.com ajax.googleapis.com www.google-analytics.com www.googletagmanager.com "
     Referrer-Policy = "strict-origin-when-cross-origin"
     Strict-Transport-Security = "max-age=2592000"
     Feature-Policy = "vibrate 'none'; geolocation 'none'; midi 'none'; notifications 'none'; push 'none'; sync-xhr 'none'; microphone 'none'; camera 'none'; magnetometer 'none'; gyroscope 'none'; speaker 'none'; vibrate 'none'; fullscreen 'none'; payment 'none'"
